home/container-orchestration/kubernetes/practice-tasks/task-aws-015-lets-encrypt-kops-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: frontend
spec:
  rules:
    -
      host: test.devopsk8.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: whoami
                port:
                  number: 80
  tls:
    -
      hosts:
        - test.devopsk8.com
      secretName: app-mydomain-com
